# encap

./: .gitignore  LICENSE  README.md  encap.py  encap.spec  encap_gui.py  encap_gui.spec  pyproject.toml
.github/workflows/: build-platforms.yml
src/encap/: __init__.py  cli.py  ffmpeg_tools.py  gui.py  models.py  service.py  wav_tools.py
tests/: test_wav_tools.py
